# chuk-mcp-s3-bucket-manager

./: .env  .gitignore  README.md  config.yaml  manifest.in  pyproject.toml
src/chuk_mcp_s3_bucket_manager/: main.py  models.py  tools.py
tests/: test_tools.py
