[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-s3-bucket-manager"
version = "0.1.1"
description = "MCP S3 Bucket Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.31",
    "chuk-mcp-runtime>=0.1.7",
    "mcp>=1.6.0",
    "pydantic>=2.11.2",
    "pyyaml>=6.0.2",
]

[project.urls]
"Homepage" = "https://github.com/chrishayuk/chuk-mcp-s3-bucket-manager"
"Bug Tracker" = "https://github.com/chrishayuk/chuk-mcp-s3-bucket-manager/issues"

[project.scripts]
chuk-mcp-s3-bucket-manager = "chuk_mcp_s3_bucket_manager.main:main"
mcp-s3-bucket-manager = "chuk_mcp_s3_bucket_manager.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]  # Change from "." to "src"
include = ["chuk_mcp_bucket_manager*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
